WIP: add TODOS and subtype resolver prototype